# ROS2_Humanoid_VLA

./: CONTROLLER_INSTALL_GUIDE.md  README.md  launch_g1.sh  launch_gazebo_house.sh  launch_robot_gui.sh  launch_ros2_control.sh  launch_wasd_control.sh  launch_wasd_separate_terminal.sh
g1_controller/: CMakeLists.txt  package.xml
g1_controller/config/: g1_controllers.yaml
g1_controller/g1_controller/: __init__.py
g1_controller/launch/: robot_ros2_control_gui.launch.py  robot_wasd_control.launch.py  robot_with_controller.launch.py  robot_with_gui.launch.py
g1_controller/scripts/: gui_controller.py  ros2_control_gui.py  stand_controller.py  wasd_controller.py  zero_pose_controller.py
g1_gazebo_sim/: CMakeLists.txt  README.md
g1_gazebo_sim/config/: gazebo.rviz
g1_gazebo_sim/launch/: gazebo_house.launch.py  gazebo_house_ros2_control.launch.py  gazebo_robot_only.launch.py  gazebo_robot_ros2_control.launch.py
g1_gazebo_sim/scripts/: add_gazebo_control.py
g1_package/: CMakeLists.txt
g1_package/urdf/: g1_29dof_gazebo.urdf  g1_29dof_ros2_control.urdf
install/: local_setup.bash  local_setup.ps1  local_setup.sh  local_setup.zsh  setup.bash  setup.ps1  setup.sh  setup.zsh
install/controller_manager/lib/controller_manager/: hardware_spawner  ros2_control_node  spawner  unspawner
install/controller_manager/test/: test_controller_spawner_wildcard_entries.yaml  test_controller_spawner_with_basic_controllers.yaml  test_controller_spawner_with_interfaces.yaml  test_controller_spawner_with_type.yaml  test_ros2_control_node.yaml
log/: latest_build
(+514 files in other folders)
